@@ -1,6 +1,8 @@
 package com.kscold.blog.config;
 
+import com.kscold.blog.security.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -12,6 +14,7 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -25,6 +28,11 @@ import java.util.List;
 @RequiredArgsConstructor
 public class SecurityConfig {
 
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    @Value("${cors.allowed-origins:http://localhost:3000}")
+    private String allowedOrigins;
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
@@ -37,15 +45,29 @@ public class SecurityConfig {
                         .requestMatchers(HttpMethod.GET, "/api/categories/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/tags/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/search/**").permitAll()
-                        .requestMatchers("/api/auth/login", "/api/auth/register").permitAll()
+                        // Feed public endpoints
+                        .requestMatchers(HttpMethod.GET, "/api/feeds/**").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/feeds/*/like").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/feeds/*/comments").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/feeds/*/comments").permitAll()
+                        .requestMatchers(HttpMethod.DELETE, "/api/feeds/*/comments/*").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/link-preview").permitAll()
+                        // Vault public endpoints
+                        .requestMatchers(HttpMethod.GET, "/api/vault/**").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/vault/notes/*/comments").permitAll()
+                        .requestMatchers(HttpMethod.DELETE, "/api/vault/notes/*/comments/*").permitAll()
+                        .requestMatchers("/api/auth/login", "/api/auth/register", "/api/auth/refresh").permitAll()
                         .requestMatchers("/api/health").permitAll()
+                        // Static resources
+                        .requestMatchers("/uploads/**").permitAll()
                         // WebSocket
                         .requestMatchers("/ws/**", "/socket.io/**").permitAll()
                         // Admin endpoints
                         .requestMatchers("/api/admin/**").hasRole("ADMIN")
                         // All other requests need authentication
                         .anyRequest().authenticated()
-                );
+                )
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -58,7 +80,7 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
+        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
